Resolução bug de plotagem das eigenfaces
Co-authored-by: Ana Carolina Erthal <anacarolerthal@users.noreply.github.com>

--- a/eigenfaces_nic.ipynb
+++ b/eigenfaces_nic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,86 +17,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_count = len(os.listdir('img/'))\n",
-    "avg_nicole = np.zeros((150, 150))\n",
-    "nicoles = []\n",
+    "img_count = len(os.listdir('img/')) # Get the amount of images in the directory\n",
+    "avg_nicole = np.zeros((150, 150)) # Matrix that will later become the \"average\" image\n",
+    "nicoles = [] # List that will house all individual arrays of images, will become a matrix later\n",
     "\n",
     "for nicole in range(1, img_count+1):\n",
+    "    # Convert images to correct size and changes its color to grayscale\n",
     "    img_nicole = img.imread(f'img/nicole{nicole}.jpeg')\n",
     "    img_nicole = Image.fromarray(np.uint8(img_nicole))\n",
     "    img_nicole = img_nicole.convert('L')\n",
     "    img_nicole = img_nicole.resize((150, 150))\n",
+    "\n",
+    "    # Turn those images into an array and append them to a list that will become a matrix of images later\n",
     "    array_nicole = np.array(img_nicole)\n",
     "    avg_nicole += array_nicole\n",
-    "    nicoles.append(array_nicole.flatten())\n",
-    "    # temp_nicole = Image.fromarray(np.uint8(array_nicole))\n",
-    "    # temp_nicole.show()\n",
-    "\n",
-    "avg_nicole = avg_nicole/img_count\n",
-    "avg_nicole = Image.fromarray(np.uint8(avg_nicole))\n",
-    "avg_nicole.show()"
+    "    nicoles.append(array_nicole.flatten())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nicole_matrix = np.row_stack(tuple(nicoles))\n",
-    "corr = np.matmul(nicole_matrix.T, nicole_matrix)"
+    "avg_nicole = avg_nicole/img_count # Gets the average image\n",
+    "plt.imshow(avg_nicole, cmap=\"gray\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "V, D = np.linalg.eig(corr)"
+    "def display_image(matrix, index):\n",
+    "    # Displays the image present in the row_{index} of the specified matrix\n",
+    "    resized = np.resize(matrix[index], (150, 150))\n",
+    "    plt.imshow(resized, cmap=\"gray\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
-      " ...\n",
-      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]\n",
-      " [0.+0.j 0.+0.j 0.+0.j ... 0.+0.j 0.+0.j 0.+0.j]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(D)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "count = 0\n",
-    "for array in nicole_matrix:\n",
-    "    if count > 1:\n",
-    "        break\n",
-    "    array = array.reshape(150, 150)\n",
-    "    array_img = Image.fromarray(np.uint8(array))\n",
-    "    array_img.show()\n",
-    "    count += 1"
+    "image_matrix = np.row_stack(tuple(nicoles))\n",
+    "subtracted_matrix = image_matrix - avg_nicole.flatten()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u, s, vh = np.linalg.svd(subtracted_matrix, full_matrices=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(vh, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# proj_data = np.dot(nicoles[0] - avg_nicole, vh[0].T).T\n",
+    "# resized = np.resize(proj_data, (150, 150))\n",
+    "# # image = Image.fromarray(resized)\n",
+    "# # image.show()\n",
+    "# print(proj_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count = 0\n",
+    "# for array in nicole_matrix:\n",
+    "#     if count > 1:\n",
+    "#         break\n",
+    "#     array = array.reshape(150, 150)\n",
+    "#     array_img = Image.fromarray(np.uint8(array))\n",
+    "#     array_img.show()\n",
+    "#     count += 1"
    ]
   }
  ],
