alteração com erro no erro

--- a/eigenfaces_nic.ipynb
+++ b/eigenfaces_nic.ipynb
@@ -115,16 +115,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ -405.25043422,  3245.62018874, -3749.85652875])"
+       "3373.5535741356803"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,6 +141,7 @@
     "    subtracted_matrix_rec = img_to_recognize - avg_nicole.flatten()\n",
     "\n",
     "\n",
+    "    # Projeção da imagem já subtraída da média no face space para obter o array de coeficientes (pesos de cada eigenface)\n",
     "    eigenfaces_matrix = vh[:3,:]\n",
     "\n",
     "    weights_img_to_recognize = []\n",
@@ -149,8 +150,12 @@
     "        weights_img_to_recognize.append(weight)\n",
     "    weights_img_to_recognize = np.array(weights_img_to_recognize)\n",
     "\n",
-    "    return weights_img_to_recognize\n",
+    "    proj_error = np.linalg.norm(subtracted_matrix_rec - np.matmul( weights_img_to_recognize , eigenfaces_matrix))\n",
+    "\n",
+    "    return proj_error\n",
     "    \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "recognize(1)\n",
