created a reconstruction function for outside images

--- a/eigenfaces_nic copy.ipynb
+++ b/eigenfaces_nic copy.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_img(path):\n",
+    "def read_image(path):\n",
     "    img_to_recognize = img.imread(path)\n",
     "    img_to_recognize = Image.fromarray(np.uint8(img_to_recognize))\n",
     "    img_to_recognize = img_to_recognize.resize((150, 150))\n",
@@ -125,8 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Vh, average_matrix, subtracted, eigenvalues = pca(image_matrix, n_pc=200)\n",
-    "eigenfaces = Vh.reshape((200, 150, 150))"
+    "Vh, average_matrix, subtracted, eigenvalues = pca(image_matrix, n_pc=500)\n",
+    "eigenfaces = Vh.reshape((500, 150, 150))"
    ]
   },
   {
@@ -184,12 +184,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def reconstruction_outsider(eigenfaces, mean, h, w, path):\n",
+    "    outsider = read_image(path)\n",
+    "    outsider = outsider - mean\n",
+    "    weights = np.dot(outsider, eigenfaces.T)\n",
+    "    centered_vector=np.dot(weights, eigenfaces)\n",
+    "    recovered_image=(mean+centered_vector).reshape(h, w)\n",
+    "    return recovered_image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_recon = os.path.join('objects', 'pandora1.jpg')\n",
+    "display_image(read_image(path_recon))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(reconstruction_outsider(Vh, average_matrix, 150, 150, path_recon))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def recognize2(dir, name, num, eig_num, ext):\n",
     "    # Treats input image (the one we wish to recognize)\n",
     "    path = os.path.join(dir, name) + str(num) + ext\n",
     "    # path = 'objects/nicole' + str(nicole_num) + '.jpg'\n",
     "    # path = 's3_' + str(nicole_num) + '.jpg'\n",
-    "    img_to_recognize = read_img(path)\n",
+    "    img_to_recognize = read_image(path)\n",
     "    subtracted_matrix_rec = img_to_recognize - average_matrix\n",
     "    display_image(subtracted_matrix_rec)\n",
     "    subtracted_matrix_rec = subtracted_matrix_rec.flatten()\n",
@@ -232,12 +266,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "george = os.path.join('lfwcrop_grey', 'faces')\n",
+    "# george = os.path.join('lfwcrop_grey', 'faces')\n",
     "\n",
-    "numbers = []\n",
-    "for number in range(9, 531):\n",
-    "    str_num = \"0\"*(4-len(str(number))) + str(number)\n",
-    "    numbers.append(str_num)"
+    "# numbers = []\n",
+    "# for number in range(9, 531):\n",
+    "#     str_num = \"0\"*(4-len(str(number))) + str(number)\n",
+    "#     numbers.append(str_num)"
    ]
   },
   {
@@ -246,11 +280,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "george_list = []\n",
-    "for number in numbers:\n",
-    "    george_dict = {}\n",
-    "    george_dict[\"Projection Error\"], george_dict[\"Face Error\"], george_dict[\"Celebrity Name\"] = recognize2(george, 'George_W_Bush_', number, 100, '.pgm')\n",
-    "    george_list.append(george_dict)"
+    "# george_list = []\n",
+    "# for number in numbers:\n",
+    "#     george_dict = {}\n",
+    "#     george_dict[\"Projection Error\"], george_dict[\"Face Error\"], george_dict[\"Celebrity Name\"] = recognize2(george, 'George_W_Bush_', number, 100, '.pgm')\n",
+    "#     george_list.append(george_dict)"
    ]
   },
   {
@@ -259,18 +293,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred_names = []\n",
-    "for dic in george_list:\n",
-    "    pred_names.append(dic['Celebrity Name'])\n",
+    "# pred_names = []\n",
+    "# for dic in george_list:\n",
+    "#     pred_names.append(dic['Celebrity Name'])\n",
     "\n",
-    "pred_names = dict(collections.Counter(pred_names))\n",
+    "# pred_names = dict(collections.Counter(pred_names))\n",
     "\n",
-    "highest = 0 \n",
-    "for value in pred_names.values():\n",
-    "    if value > highest:\n",
-    "        highest = value\n",
+    "# highest = 0 \n",
+    "# for value in pred_names.values():\n",
+    "#     if value > highest:\n",
+    "#         highest = value\n",
     "\n",
-    "pred_names['George W Bush'], highest"
+    "# pred_names['George W Bush'], highest"
    ]
   },
   {
