--- a/eigenfaces_nic copy.ipynb
+++ b/eigenfaces_nic copy.ipynb
@@ -199,28 +199,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_recon = os.path.join('objects', 'pandora1.jpg')\n",
-    "display_image(read_image(path_recon))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "display_image(reconstruction_outsider(Vh, average_matrix, 150, 150, path_recon))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def recognize2(dir, name, num, eig_num, ext):\n",
+    "def recognize2(path, eig_num):\n",
     "    # Treats input image (the one we wish to recognize)\n",
-    "    path = os.path.join(dir, name) + str(num) + ext\n",
     "    # path = 'objects/nicole' + str(nicole_num) + '.jpg'\n",
     "    # path = 's3_' + str(nicole_num) + '.jpg'\n",
     "    img_to_recognize = read_image(path)\n",
@@ -258,6 +238,34 @@
     "    celebrity_name = celebrity_names[guess_index]\n",
     "    return proj_error, face_error, celebrity_name\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_recon = os.path.join('objects', 'nicolas1.jpg')\n",
+    "display_image(read_image(path_recon))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_image(reconstruction_outsider(Vh, average_matrix, 150, 150, path_recon))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "recognize2(path_recon, 150)"
    ]
   },
   {
