--- a/eigenfaces_nic copy.ipynb
+++ b/eigenfaces_nic copy.ipynb
@@ -135,8 +135,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "principal_components = [eigenvalue*100/np.sum(eigenvalues) for eigenvalue in eigenvalues]\n",
-    "principal_components"
+    "principal_components = [eigenvalue/np.sum(eigenvalues) for eigenvalue in eigenvalues]\n",
+    "count = 0\n",
+    "total_var = 0\n",
+    "for component in principal_components:\n",
+    "    total_var += component\n",
+    "    count += 1\n",
+    "    if total_var > 0.95:\n",
+    "        break\n",
+    "count, total_var"
    ]
   },
   {
@@ -215,7 +222,6 @@
     "    # path = 's3_' + str(nicole_num) + '.jpg'\n",
     "    img_to_recognize = read_image(path)\n",
     "    subtracted_matrix_rec = img_to_recognize - average_matrix\n",
-    "    display_image(subtracted_matrix_rec)\n",
     "    subtracted_matrix_rec = subtracted_matrix_rec.flatten()\n",
     "    # Projeção da imagem já subtraída da média no face space para obter o array de coeficientes (pesos de cada eigenface)\n",
     "    eigenfaces_matrix = Vh[:eig_num,:]\n",
@@ -246,6 +252,8 @@
     "    guess_index = np.argmin(dist_in_space)\n",
     "    \n",
     "    celebrity_name = celebrity_names[guess_index]\n",
+    "\n",
+    "    display_image(image_matrix[guess_index])\n",
     "    return proj_error*255, face_error, celebrity_name\n",
     "    "
    ]
