--- a/eigenfaces_analysis.ipynb
+++ b/eigenfaces_analysis.ipynb
@@ -36,6 +36,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def display_image(array):\n",
+    "    # Displays the image represented by a flattened array\n",
+    "    resized = np.resize(array, (150, 150))\n",
+    "    fig = plt.imshow(resized, cmap=\"gray\")\n",
+    "    fig.axes.get_xaxis().set_visible(False)\n",
+    "    fig.axes.get_yaxis().set_visible(False)\n",
+    "    fig\n",
+    "\n",
+    "\n",
     "def display_image_ind(matrix, index):\n",
     "    # Displays the image present in the row_{index} of the specified matrix\n",
     "    resized = np.resize(matrix[index], (150, 150))\n",
@@ -43,16 +52,6 @@
     "    fig.axes.get_xaxis().set_visible(False)\n",
     "    fig.axes.get_yaxis().set_visible(False)\n",
     "    fig\n",
-    "\n",
-    "\n",
-    "def display_image(matrix):\n",
-    "    # Displays the image present in the row_{index} of the specified matrix\n",
-    "    resized = np.resize(matrix, (150, 150))\n",
-    "    fig = plt.imshow(resized, cmap=\"gray\")\n",
-    "    fig.axes.get_xaxis().set_visible(False)\n",
-    "    fig.axes.get_yaxis().set_visible(False)\n",
-    "    fig\n",
-    "\n",
     "\n",
     "\n",
     "def plot_portraits(images, titles, h, w, n_row, n_col):\n",
@@ -76,16 +75,6 @@
     "\n",
     "for file in os.listdir('faces'):\n",
     "    images.append(read_image(os.path.join('faces', file)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "celebrity_photos=os.listdir('faces')\n",
-    "celebrity_names=[name[:name.find('0')-1].replace(\"_\", \" \") for name in celebrity_photos]\n"
    ]
   },
   {
@@ -173,15 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# display_image_ind(image_matrix, 307)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "display_image_ind(image_matrix, 142)\n",
     "plt.savefig('original face.png', bbox_inches='tight')"
    ]
@@ -235,7 +215,7 @@
     "\n",
     "    projection = eigenfaces_matrix.T @ weight # Gets the projection of the image on the facespace\n",
     "\n",
-    "    proj_error = np.linalg.norm(subtracted_matrix_rec - projection) # Gets the projection error\n",
+    "    proj_error = np.linalg.norm(subtracted_matrix_rec - projection)*255 # Gets the projection error\n",
     "\n",
     "    if proj_error > face_limit: # Checks if the error is higher than the set limit\n",
     "        return \"Not a face!\"\n",
@@ -255,14 +235,15 @@
     "\n",
     "    face_error = dist_in_space.min() # Gets the lowest distance\n",
     "\n",
-    "    # Trying to get the right face (range of valid error still to be determined)\n",
-    "    guess_index = np.argmin(dist_in_space)\n",
+    "    guess_index = np.argmin(dist_in_space) # Gets the image tied to that lowest distance\n",
     "    \n",
-    "    celebrity_name = celebrity_names[guess_index]\n",
     "\n",
-    "    display_image(image_matrix[guess_index])\n",
-    "    return proj_error*255, face_error, celebrity_name\n",
-    "    "
+    "    celebrity_photos = os.listdir('faces')\n",
+    "    celebrity_names = [name[:name.find('0')-1].replace(\"_\", \" \") for name in celebrity_photos] # Gets the names of all images\n",
+    "    celebrity_name = celebrity_names[guess_index] # Gets the predicted name\n",
+    "\n",
+    "    display_image(image_matrix[guess_index]) # Displays the closest image\n",
+    "    return proj_error, face_error, celebrity_name"
    ]
   },
   {
