finishing the project

--- a/eigenfaces_analysis.ipynb
+++ b/eigenfaces_analysis.ipynb
@@ -117,15 +117,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Vh[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "percent_eigenvalues = [eigenvalue/np.sum(eigenvalues) for eigenvalue in eigenvalues]\n",
     "count = 0\n",
     "total_var = 0\n",
-    "\n",
+    "var_values = []\n",
     "for eigenvalue in percent_eigenvalues:\n",
     "    total_var += eigenvalue\n",
     "    count += 1\n",
-    "    if total_var > 0.95:\n",
-    "        break\n",
+    "    var_values.append(total_var)\n",
+    "    # if total_var > 0.95:\n",
+    "    #     break\n",
     "\n",
     "print(\"Count:\", count, \"\\nTotal Variance:\", total_var)"
    ]
@@ -136,9 +146,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.plot(var_values)\n",
+    "plt.xticks(range(0,400,30))\n",
+    "plt.xlim(-1, 400)\n",
+    "plt.savefig(os.path.join('images', 'accumulated variance.png'))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "display_image(average_matrix)\n",
     "\n",
-    "plt.savefig('average face.png', bbox_inches='tight')"
+    "plt.savefig(os.path.join('images', 'average face.png'), bbox_inches='tight')"
    ]
   },
   {
@@ -149,11 +172,11 @@
    "source": [
     "# eigenface_titles = [f\"eigenface {434-i}\" for i in range(eigenfaces.shape[0])]\n",
     "# plot_portraits(eigenfaces[::-1], eigenface_titles, 150, 150, 2, 5) \n",
-    "# plt.savefig('lowest eigenfaces.png', bbox_inches='tight')\n",
+    "# plt.savefig(os.path.join('images', 'lowest eigenfaces.png'), bbox_inches='tight')\n",
     "\n",
     "eigenface_titles = [f\"eigenface {i+91}\" for i in range(eigenfaces.shape[0])]\n",
     "plot_portraits(eigenfaces[90:105,:], eigenface_titles, 150, 150, 2, 5) \n",
-    "plt.savefig('medium eigenfaces.png', bbox_inches='tight')"
+    "plt.savefig(os.path.join('images', 'medium eigenfaces.png'), bbox_inches='tight')"
    ]
   },
   {
@@ -163,7 +186,7 @@
    "outputs": [],
    "source": [
     "display_image_ind(image_matrix, 142)\n",
-    "plt.savefig('original face.png', bbox_inches='tight')"
+    "plt.savefig(os.path.join('images', 'original face.png'), bbox_inches='tight')"
    ]
   },
   {
@@ -179,7 +202,7 @@
     "    return recovered_image\n",
     "\n",
     "display_image(reconstruction(subtracted, Vh[:300,:], average_matrix, 150, 150, 142))\n",
-    "plt.savefig('reconstructed full face.png', bbox_inches='tight')"
+    "plt.savefig(os.path.join('images', 'reconstructed full face.png'), bbox_inches='tight')"
    ]
   },
   {
@@ -253,8 +276,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_recon = os.path.join('objects', 'dandan1.jpg')\n",
-    "display_image(read_image(path_recon))"
+    "name = 'carol7'\n",
+    "path_recon = os.path.join('extra_testing', name + '.jpg')\n",
+    "display_image(read_image(path_recon))\n",
+    "plt.savefig(os.path.join('images', name + '.png'), bbox_inches='tight')"
    ]
   },
   {
@@ -263,7 +288,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "recognize(path_recon, 106, 3500, 22.2)"
+    "print(recognize(path_recon, 106, 5000, 100))\n",
+    "plt.savefig(os.path.join('images', name + '_famoso.png'), bbox_inches='tight')"
    ]
   },
   {
@@ -311,29 +337,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "success_rate, failure_rate, not_face_rate, unknown_rate, results = test_images('faces', 106, 3500, 22.2)\n",
+    "success_rate, failure_rate, not_face_rate, unknown_rate = test_images('faces', 106, 3500, 22.2)\n",
     "success_rate, failure_rate, not_face_rate, unknown_rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(eigenvalues)\n",
-    "plt.xticks(range(0,200,20))\n",
-    "plt.xlim(-1, 100)\n",
-    "plt.show()"
    ]
   }
  ],
